update client api
