# pkg/clientapi/v1/types.go
@@ -2,21 +2,24 @@ package clientapi
 
 // ClientCreateRequest ...
 type ClientCreateRequest struct {
-	ID         string `json:"id"`
-	Secret     string `json:"secret"`
-	AccessType string `json:"access_type"`
+	ID                  string   `json:"id"`
+	Secret              string   `json:"secret"`
+	AccessType          string   `json:"access_type"`
+	AllowedCallbackURLs []string `json:"allowed_callback_urls"`
 }
 
 // ClientGetResponse ...
 type ClientGetResponse struct {
-	ID         string `json:"id"`
-	Secret     string `json:"secret"`
-	AccessType string `json:"access_type"`
-	CreatedAt  string `json:"createdAt"`
+	ID                  string   `json:"id"`
+	Secret              string   `json:"secret"`
+	AccessType          string   `json:"access_type"`
+	CreatedAt           string   `json:"created_at"`
+	AllowedCallbackURLs []string `json:"allowed_callback_urls"`
 }
 
 // ClientPutRequest ...
 type ClientPutRequest struct {
-	Secret     string `json:"secret"`
-	AccessType string `json:"access_type"`
+	Secret              string   `json:"secret"`
+	AccessType          string   `json:"access_type"`
+	AllowedCallbackURLs []string `json:"allowed_callback_urls"`
 }
